--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,40 +1,115 @@
 @import './reset.scss';
 
-html {
-    height: 100%;
+html, body {
+	height: 100%;
 }
 
 body {
-    background-color: #cecdc2;
-}
+	background: #d3afaf;
+	font-size: 16px;
+	font-family: Arial;
 
-header {
-    display: flex;
-    flex-flow: column wrap;
-    align-items: center;
-    justify-content: center;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 80px;
-    background-color: #eee;
-    border-bottom: 1px solid black;
+	.container {
+		width: 40%;
+		padding: 20px 65px;
+		margin: 0 auto;
+		background: #50626C;
+		display: flex;
+		flex-flow: column wrap;
+		align-items: center;
+		justify-content: space-between;
+		
+		.addBlogBtn {
+			width: 65%;
+			height: 45px;
+			cursor: pointer;
+			font-size: 20px;
+			box-shadow:inset 0px 0px 15px 3px #23395e;
+			background-color: #2e466e;
+			color: white;
+			border-radius: 15px;
+			border: 1px solid #1f2f47;
 
-        .sourceList {
-            font-size: 18px;
-            text-align: center;
+			&:hover {
+				background-color:#415989;
+			}
+			&:active {
+				position:relative;
+				top:1px;
+			}
+		}
 
-            .sourceItem {
-                display: inline-block;
-                width: 90px;
-                vertical-align: middle;
-                margin: 3px 20px 3px 0;
-                cursor: pointer;
+		.searchBlog {
+			display: flex;
+			flex-flow: row wrap;
+			align-items: center;
+			justify-content: space-between;
+			width: 100%;
+			margin: 20px 0;
 
-                &.activeSource {
-                    color: red;
-                }
-            }
-        }
+			.searchBlogInput {
+				flex-basis: 70%;
+				height: 35px;
+				font-size: 20px;
+			}
+
+			.searchBlogOption {
+				display: flex;
+				flex-flow: row wrap;
+				align-items: center;
+				justify-content: center;
+				flex-basis: 25%;
+
+				label {
+					flex-basis: 100%;
+					color: white;
+					cursor: pointer;
+				}
+			}
+		}
+
+		.blogList {
+			display: flex;
+			flex-flow: column wrap;
+			align-items: center;
+			justify-content: center;
+
+			.blogBox {
+				position: relative;
+				box-sizing: border-box;
+				width: 100%;
+				background: #ccd2dd;
+				border-radius: 5px;
+				padding: 15px;
+				margin-bottom: 10px;
+
+				.blogInfo {
+					display: flex;
+					flex-flow: row wrap;
+					align-items: flex-start;
+
+					dt {
+						flex-basis: 20%;
+						margin-bottom: 5px;
+						font-weight: bold;
+					}
+
+					dd {
+						flex-basis: 80%;
+						margin-bottom: 5px;
+						text-align: justify;
+					}
+				}
+
+				.removeBlog {
+					position: absolute;
+					top: 12px;
+					right: 12px;
+					font-size: 20px;
+					font-weight: bold;
+					color: #961e1e;
+				}
+			}
+		}
+	}
 }
