--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,6 +9,25 @@ body {
 	font-size: 16px;
 	font-family: Arial;
 
+	.modalContainer div {
+		top: 0;
+		right: 0;
+		left: 0;
+		bottom: 0;
+		width: 100%;
+    	height: 100%;
+    	position: fixed;
+    	background-color: rgba(0,0,0,0.4);
+
+    	.modal {
+    		margin: 15% auto;
+    		width: 600px;
+    		height: auto;
+    		background: #ccd2dd;
+    		border: 1px solid black;
+    	}
+	}
+
 	.container {
 		width: 40%;
 		padding: 20px 65px;
