--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,6 @@
 @import './reset.scss';
+@import './elements.scss';
+@import './modals.scss';
 
 html, body {
 	height: 100%;
@@ -8,25 +10,6 @@ body {
 	background: #d3afaf;
 	font-size: 16px;
 	font-family: Arial;
-
-	.modalContainer div {
-		top: 0;
-		right: 0;
-		left: 0;
-		bottom: 0;
-		width: 100%;
-    	height: 100%;
-    	position: fixed;
-    	background-color: rgba(0,0,0,0.4);
-
-    	.modal {
-    		margin: 15% auto;
-    		width: 600px;
-    		height: auto;
-    		background: #ccd2dd;
-    		border: 1px solid black;
-    	}
-	}
 
 	.container {
 		width: 40%;
@@ -41,21 +24,7 @@ body {
 		.addBlogBtn {
 			width: 65%;
 			height: 45px;
-			cursor: pointer;
-			font-size: 20px;
-			box-shadow:inset 0px 0px 15px 3px #23395e;
-			background-color: #2e466e;
-			color: white;
 			border-radius: 15px;
-			border: 1px solid #1f2f47;
-
-			&:hover {
-				background-color:#415989;
-			}
-			&:active {
-				position:relative;
-				top:1px;
-			}
 		}
 
 		.searchBlog {
