--- a/src/client/styles/elements.scss
+++ b/src/client/styles/elements.scss
@@ -7,11 +7,20 @@
 	border: 1px solid #1f2f47;
 
 	&:hover {
-				background-color:#415989;
-			}
+		background-color: #415989;
+	}
 
 	&:active {
-		position:relative;
+		position: relative;
 		top: 1px;
+	}
+}
+
+.lnk {
+	font-size: 22px;
+	color: #ccc;
+
+	&:hover {
+		color: white;
 	}
 }
