--- a/src/client/js/components/HomePage/styles.scss
+++ b/src/client/js/components/HomePage/styles.scss
@@ -11,25 +11,29 @@
 	left: 0;
 	background: #50626C;
 	color: white;
-	display: flex;
-	flex-flow: column wrap;
-	align-items: center;
-	justify-content: space-between;
 
-	.infoText {
-		font-size: 18px;
-
-		.loginLnk,
-		.registerLnk {
+	.homePageInner {
+		display: flex;
+		flex-flow: column wrap;
+		align-items: center;
+		justify-content: space-between;
+		height: 100%;
+		
+		.infoText {
 			font-size: 18px;
+	
+			.loginLnk,
+			.registerLnk {
+				font-size: 18px;
+			}
+	
+			.userName {
+				color: #a3bbe0;
+			}
 		}
-
-		.userName {
-			color: #a3bbe0;
+	
+		.blogsListLnk {
+			font-size: 20px;
 		}
-	}
-
-	.blogsListLnk {
-		font-size: 20px;
 	}
 }
